// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavIconItem should render the component as HTMLAnchorElement 1`] = `
<DocumentFragment>
  <mock-styled.a
    href="#"
    role="button"
  >
    <span>
      test
    </span>
  </mock-styled.a>
</DocumentFragment>
`;

exports[`NavIconItem should render the component as HTMLButtonElement 1`] = `
<DocumentFragment>
  <mock-styled.button
    role="button"
  >
    <span>
      test
    </span>
  </mock-styled.button>
</DocumentFragment>
`;
